# mai

./: README.md
бжд/: бжд Бланк ЛР № 2-1.doc
дискран/lab4/: main.cpp
дискран/lab5/: solution.tar
дискран/lab6/: solution.tar
дискран/lab7/: main.cpp
дискран/lab8/: main.cpp
ии/: README.md  mylog.py  myrtree.py  mytree.py
кг/: README.md
лп/: README.md
матмод/: govniwe_final_last_ultimate_release.ipynb
менеджмент/: 1 задание 8О-308 Обыденкова.odt  Задача распределения 8О-308.docx
нейро/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb
ооп/: README.md
ооп/7/: CMakeLists.txt  command.cpp  command.h  document.cpp  document.h  editor.cpp  editor.h  factory.cpp  factory.h  figure.h  main.cpp  oop_exercise_07  point.cpp  point.h  rectangle.cpp  rectangle.h  report.odt  square.cpp  square.h  trapezoid.cpp  trapezoid.h
ооп/7/tests/: test_01.result  test_01.test  test_02.result  test_02.test
ооп/8/: CMakeLists.txt  README.md  factory.cpp  factory.h  figure.h  main.cpp  meson.build  point.cpp  point.h  processor.cpp  processor.h  rectangle.cpp  rectangle.h  report.odt  square.cpp  square.h  subscriber.cpp  subscriber.h  trapezoid.cpp  trapezoid.h
ооп/8/tests/: test_01.test  test_02.test
ос/: README.md
ос/6/: CMakeLists.txt  child_node.cpp  main_node.cpp  report.odt  server_functions.cpp  server_functions.h
физра/: 2.docx  3.docx  кр.odt  обыденкова 1.docx
чм/: 8-308--C-Splines.xlsx  8-308--Interpolyatsiya.xlsx  8-308--MNK.xlsx  8-308--Metod_Linearizatsii.xlsx  8-308--ODU1.xlsx  8-308--ODU2.xlsx  ChM_Lab4.xlsx  Lab1_Jac.py  Lab1_Step_Jac.py
экономика/: реферат.odt
(+179 files in other folders)
